--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   ],
   "description": "Data exploration platform designed to be visual, intuitive, and interactive",
   "logo": "https://raw.githubusercontent.com/apache/superset/master/superset-frontend/src/assets/branding/superset-logo-stacked.png",
-  "repository": "https://github.com/alitrack/superset-on-heroku",
+  "repository": "https://github.com/yitan2020/superset-on-heroku-1",
   "addons": [
     "heroku-postgresql"
   ],
@@ -26,5 +26,6 @@
   },
   "scripts": {
     "postdeploy": "sh ./postdeploy.sh"
-  }  
+  },
+  "stack": "heroku-20"
 }
